# Sudoku-Solver

./: Cargo.toml  README.md  package-lock.json  tailwind.css
assets/: tailwind.css
src/: api.rs  app.rs  dapp.rs  main.rs  solver.rs  sudoku.rs  ui.rs
