[package]
name = "Sudoku-Solver"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = "0.6.3"
eframe = "0.31.1"
iced = "0.13.1"
reqwest = { version = "0.12.20", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
